--- a/FloatWindow/res/layout/float_window.xml
+++ b/FloatWindow/res/layout/float_window.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ids"
+    android:id="@+id/float_lyt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
